--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ html{
 #home::before{ 
     content: "";
     position: absolute;
-    background: url('../image.jpeg') no-repeat center center/cover;
+    background: url('image.jpeg') no-repeat center center/cover;
     height: 642px;
     top:0px;
     left:0px;
@@ -136,7 +136,7 @@ html{
 #client-section::before{
  content: "";
  position: absolute;
- background: url('../plate.jpg') no-repeat center center/cover;
+ background: url('plate.jpg') no-repeat center center/cover;
  width: 100%;
  height: 100%;
  z-index: -1;
@@ -169,7 +169,7 @@ html{
     height: 100%;
     z-index: -1;
     opacity: 0.7;
-    background: url('../greenphone.png') no-repeat center center/cover;
+    background: url('greenphone.png') no-repeat center center/cover;
 
 }
 #contact-box{
